estrutural.outline: separado padrões em HTML4 e HTML5; adicionado outline

--- a/estrutural/outline/html5/exemplo.html
+++ b/estrutural/outline/html5/exemplo.html
@@ -5,7 +5,10 @@
     <title>Estrutural - Outline HTML5</title>
   </head>
   <body>
-    <h1><img src="./image-html5.png" alt="Título nível 1, como alt em imagem"/></h1>
+    <!-- @todo finalizar o exemplo (fititnt, 2014-10-04 22:08) -->
+    
+    <!-- Caso tenha uma imagem em um cabeçalho, o atributo alt dela será usado no outline -->
+    <h1><img src="./image-html5.png" alt="Título nível 1, como alt em imagem"></h1>
     <p>Conteúdo A</p>
     <h2>Título nível 2</h2>
     <p>Conteúdo B</p>
