--- a/estrutural/outline/html4/exemplo.html
+++ b/estrutural/outline/html4/exemplo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="pt-BR">
   <head>
-    <meta charset="utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Estrutural - Outline HTML4</title>
   </head>
   <body>
     <!-- Caso tenha uma imagem em um cabeçalho, o atributo alt dela será usado no outline -->
-    <h1><img src="./image-html4.gif" alt="Título nível 1, como alt em imagem"/></h1>
+    <h1><img src="./image-html4.gif" alt="Título nível 1, como alt em imagem"></h1>
     <p>Conteúdo A</p>
     <h2>Título nível 2</h2>
     <p>Conteúdo B</p>
