--- a/estrutural/outline/html4/exemplo.html
+++ b/estrutural/outline/html4/exemplo.html
@@ -3,17 +3,49 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Estrutural - Outline HTML4</title>
+    <style type="text/css">
+      /**
+       * Fazer conteúdo não ser ignorado por máquinas (como leitores de tela)
+       * 
+       * Não use 'visibility: hidden;', 'display:none;' ou 'width:0px;height:0px' pois será ignorado, mesmo por máquinas
+       *
+       * Q: Prejudica relevância em mecanismos de busca? 
+       * R: Não. Uso racional, para melhorar outline e experiencia de leitores de tela é bem visto e não penalizado.
+       * 
+       * @see https://support.google.com/webmasters/answer/66353?hl=pt
+       * @see http://webaim.org/techniques/css/invisiblecontent/
+       */
+      .screen-reader-only {
+        position: absolute !important;
+        clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+        clip: rect(1px, 1px, 1px, 1px);
+      }
+    </style>
   </head>
   <body>
-    <!-- Caso tenha uma imagem em um cabeçalho, o atributo alt dela será usado no outline -->
-    <h1><img src="./image-html4.gif" alt="Título nível 1, como alt em imagem"></h1>
+    <!--
+       Nota 1: Caso tenha uma imagem em um cabeçalho, o atributo alt dela será usado no outline
+
+       Erro típico 1: (para fins de outline) atributo title em 'a' ou 'img' é ignorado.
+    -->
+    <h1>
+      <a href="./">
+        <img src="./image-html4.gif" alt="Título nível 1, como alt em imagem">
+      </a>
+    </h1>
     <p>Conteúdo A</p>
     <h2>Título nível 2</h2>
     <p>Conteúdo B</p>
     <h3>Título nível 3</h3>
     <p>Conteúdo C</p>
     <h2>Título nível 2</h2>
-    <h1>Título nível 1, segundo</h1>
+    <!--
+       Nota 2: quanto necessário para manter a estrutura do documento sem afetar visual da página, use técnicas
+               para exibir conteúdo apenas para leitores de tela
+    
+       Erro Típico 2: não use 'visibility: hidden;', 'display:none;' ou 'width:0px;height:0px'
+    -->
+    <h1 class="screen-reader-only">Título nível 1, visualmente escondido, mas presente no outline</h1>
     <p>Conteúdo D</p>
     <h2>Título nível 2, segundo</h2>
     <p>Conteúdo E</p>
