outline-tool: criado versao inicial

--- a/outline-tool/teste.html
+++ b/outline-tool/teste.html
@@ -21,6 +21,7 @@
         clip: rect(1px, 1px, 1px, 1px);
       }
     </style>
+    <link rel="stylesheet" href="./outline-tool.css" type="text/css" media="all" />
   </head>
   <body>
     <!-- @todo finalizar o exemplo (fititnt, 2014-10-04 22:08) -->
